Fix: Limit coversize in album detail view #1361

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -764,6 +764,10 @@ div.key {
   }
 }
 
+.colCover {
+    max-width: 27rem;
+}
+
 .dropdown-item:focus {
   background-color: inherit;
 }
